# termadio

./: .gitignore  Cargo.toml  README.md  favorites.json  preferences.json
src/: config.rs  favorites.rs  main.rs
src/api/: mod.rs
src/commands/: country.rs  favorites.rs  hello.rs  info.rs  mod.rs  radio.rs  search.rs
src/player/: mod.rs
src/preferences/: storage.rs
src/ui/: mod.rs
