[package]
name = "termadio"
version = "0.1.0"
edition = "2021"
description = "A simple CLI application"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[[bin]]
name = "termadio"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
ratatui = "0.24"
crossterm = "0.27"
rodio = "0.17"
futures-util = "0.3"
